# amplifier-bundle-beads

./: README.md  bundle.md  pyproject.toml
amplifier_bundle_beads/: __init__.py  hooks.py  tool.py
amplifier_module_tool_beads/: __init__.py  hooks.py  tool.py
behaviors/: beads.yaml
commands/: bd-ask.md  bd-claim.md  bd-discover.md  bd-done.md  bd-ready.md
context/: beads-instructions.md
examples/: workspace-bundle.md
skills/beads-workflow/: SKILL.md
tests/: __init__.py  test_tool.py
